--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
@@ -17,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
+    "canvas-confetti": "^1.9.3",
     "motion-v": "^1.7.1",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13",
