--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Test & Build Vue Project
+name: Porfolio app
 
 # 🔁 Déclenchement du workflow à chaque push ou pull request sur master
 on:
@@ -12,21 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Cloner ton dépôt
       - name: Checkout du code
         uses: actions/checkout@v3
 
-      # 2️⃣ Installer Node.js (ajuste la version si besoin)
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
-      # 3️⃣ Installer les dépendances
       - name: Installer les dépendances
         run: npm ci
 
-      # 4️⃣ Vérifier le typage TypeScript
       - name: Vérifier le typage TypeScript
         run: |
           if ! grep -q '"type-check"' package.json; then
@@ -36,15 +32,12 @@ jobs:
           fi
           npm run type-check
 
-      # 5️⃣ Lancer les tests (si présents)
       - name: Lancer les tests
         run: npm run test --if-present
 
-      # 6️⃣ Construire le projet
       - name: Build du projet
         run: npm run build
 
-      # 7️⃣ Déclencher le déploiement Netlify via le hook
       - name: Déployer sur Netlify
         if: success()
         run: |
