--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "motion-v": "^1.7.1",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13",
+    "tsparticles": "^3.9.1",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-particles": "^2.12.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@types/axios": "^0.9.36",
+    "@types/three": "^0.180.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.21",
