--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.12.2",
     "canvas-confetti": "^1.9.3",
     "motion-v": "^1.7.1",
+    "qrcode": "^1.5.4",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13",
     "tsparticles": "^3.9.1",
